User can now see long url by providing the short one
