# build/swagger.json
@@ -68,33 +68,6 @@
 				}
 			},
 			"get": {
-				"operationId": "GetAllUrls",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"message": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"message"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/urls/{id}": {
-			"get": {
 				"operationId": "GetSingleUrl",
 				"responses": {
 					"200": {
@@ -102,15 +75,32 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"message": {
-											"type": "string"
+									"anyOf": [
+										{
+											"properties": {
+												"message": {},
+												"url": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"url"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"url": {},
+												"message": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"message"
+											],
+											"type": "object"
 										}
-									},
-									"required": [
-										"message"
-									],
-									"type": "object"
+									]
 								}
 							}
 						}
@@ -119,8 +109,8 @@
 				"security": [],
 				"parameters": [
 					{
-						"in": "path",
-						"name": "id",
+						"in": "query",
+						"name": "shortUrl",
 						"required": true,
 						"schema": {
 							"type": "string"
